[package]
name = "cargo-excel-export"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-postgres = "0.7"
postgres = "0.19"
rust_xlsxwriter = "0.80"
rayon = "1.7"
futures = "0.3"
chrono = "0.4"
memmap2 = "0.9.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1